fix white space in mobile view

--- a/style.css
+++ b/style.css
@@ -67,11 +67,14 @@
   --color-secondary: #666a8a;
   --color-bg: #2c354c;
 }
+html {
+  overflow-x: hidden;
+}
 body {
+  overflow-x: hidden;
   margin: 0;
   width: 100%;
   min-height: 100%;
-  overflow-x: hidden;
   background-color: var(--color-bg);
   color: var(--color-primary);
   font-family: var(--font-primary);
@@ -677,7 +680,7 @@ footer .social a {
     color: var(--color-bg);
   }
   footer > * {
-    padding: 30px;
+    padding: 30px 0;
   }
 }
 
